--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"markdown-it-anchor": "^8.6.7"
 	},
 	"dependencies": {
-		"lodash": "^4.17.21"
+		"lodash": "^4.17.21",
+		"markdown-it-footnote": "^3.0.3"
 	}
 }
