--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "eleventy-base-blog",
-	"version": "8.0.0",
-	"description": "A starter repository for a blog web site using the Eleventy site generator.",
+	"name": "fromjason-eleventy",
+	"version": "1.1.0",
+	"description": "My digital garden",
 	"scripts": {
 		"build": "npx @11ty/eleventy",
 		"build-ghpages": "npx @11ty/eleventy --pathprefix=/eleventy-base-blog/",
@@ -12,12 +12,12 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git://github.com/11ty/eleventy-base-blog.git"
+		"url": "https://github.com/fromjasonstuff/fromjason-eleventy.git"
 	},
 	"author": {
-		"name": "Zach Leatherman",
-		"email": "zachleatherman@gmail.com",
-		"url": "https://zachleat.com/"
+		"name": "Jason Velazquez",
+		"email": "jason.velazquez@me.com",
+		"url": "https://fromjason.xyz/"
 	},
 	"license": "MIT",
 	"engines": {
@@ -28,9 +28,9 @@
 		"url": "https://opencollective.com/11ty"
 	},
 	"bugs": {
-		"url": "https://github.com/11ty/eleventy-base-blog/issues"
+		"url": "https://github.com/fromjasonstuff/fromjason-eleventy/issues"
 	},
-	"homepage": "https://github.com/11ty/eleventy-base-blog#readme",
+	"homepage": "https://github.com/fromjasonstuff/fromjason-eleventy#readme",
 	"devDependencies": {
 		"@11ty/eleventy": "^2.0.1",
 		"@11ty/eleventy-img": "^3.1.1",
@@ -42,6 +42,7 @@
 		"markdown-it-anchor": "^8.6.7"
 	},
 	"dependencies": {
+		"@octokit/rest": "^20.0.2",
 		"lodash": "^4.17.21",
 		"markdown-it-footnote": "^3.0.3"
 	}
