--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,9 @@
 [Settings]
   ID = "5d3e30a9-ff13-419a-9b09-5a2e08da5b7d"
   
+[functions]
+  directory = "netlify/functions"
+  
 [[plugins]]
 
 	# Opt-in to the Netlify Lighthouse plugin (choose one):
