--- a/netlify.toml
+++ b/netlify.toml
@@ -11,7 +11,7 @@
 [[redirects]]
 from = "https://www.fromjason.xyz/stories/:splat"
 to = "https://stories.fromjason.xyz/*"
-status = 301!
+status = 301
   
 [[plugins]]
 
