--- a/netlify.toml
+++ b/netlify.toml
@@ -12,6 +12,7 @@
 from = "https://www.fromjason.xyz/stories/:splat"
 to = "https://stories.fromjason.xyz/*"
 status = 301
+force = true
   
 [[plugins]]
 
