--- a/netlify.toml
+++ b/netlify.toml
@@ -12,15 +12,10 @@
   from = "/patreons-new-logo-design-is-good-actually"
   to = "/freelance/patreon-s-new-logo-design-is-good-actually/"
   status = 301
-
+  
 [[redirects]]
   from = "/notebook"
   to = "/p/notebook/"
-  status = 301
-  
-[[redirects]]
-  from = "https://www.fromjason.xyz/p/notebook/from-jason-2-0-is-an-11ty-powered-digital-garden-with-multiple-plots/"
-  to = "https://www.fromjason.xyz/p/freelance/from-jason-2-0-is-an-11ty-powered-digital-garden-with-multiple-plots/"
   status = 301
 
 [[redirects]]
@@ -109,6 +104,21 @@
 [[redirects]]
   from = "/current-projects/"
   to = "/me/now/"
+  status = 301
+
+[[redirects]]
+  from = "/projects"
+  to = "/me/now/"
+  status = 301
+
+[[redirects]]
+  from = "/lets-keep-in-touch"
+  to = "/me/"
+  status = 301
+  
+[[redirects]]
+  from = "/p/stories/colophon/"
+  to = "/me/colophon/"
   status = 301
 
 [[redirects]]
