--- a/netlify.toml
+++ b/netlify.toml
@@ -29,6 +29,11 @@
   status = 301
 
 [[redirects]]
+  from = "/travel"
+  to = "/p/travel/"
+  status = 301
+  
+[[redirects]]
   from = "https://freelance.fromjason.xyz/*"
   to = "https://fromjason.xyz/p/freelance/:splat"
   status = 301
