--- a/netlify.toml
+++ b/netlify.toml
@@ -163,5 +163,8 @@
   to = "/p/freelance/from-jason-2-0-is-an-11ty-powered-digital-garden-with-multiple-plots/"
   status = 301
 
-  
+  [[redirects]]
+  from = "/p/notebook/on-ia-presenter-and-my-mission-to-preserve-my-digital-assets/"
+  to = "//p/freelance/on-ia-presenter-and-my-mission-to-preserve-my-digital-assets/"
+  status = 301
   
