--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@octokit/rest": "^20.0.2",
 		"base-64": "^1.0.0",
 		"lodash": "^4.17.21",
+		"markdown-it": "^14.0.0",
 		"markdown-it-footnote": "^3.0.3"
 	}
 }
