--- a/netlify.toml
+++ b/netlify.toml
@@ -175,7 +175,7 @@
 
 [[redirects]]
   from = "/p/notebook/mastodon-gave-away-its-only-weapon-part-1/"
-  to = "/p/notebook/"
+  to = "/p/notebook/the-medium-is-the-message-threads-isn-t-a-win-for-the-fediverse/"
   status = 301
 
 [[redirects]]
