--- a/netlify.toml
+++ b/netlify.toml
@@ -6,7 +6,7 @@
   ID = "5d3e30a9-ff13-419a-9b09-5a2e08da5b7d"
 
 [[redirects]]
-  from = "https://hyper.fromjason.xyz/*"
+  from = "https://fromjason.xyz/hyper/*"
   to = "https://publish.obsidian.md/serve?url=mysite.com/my-notes/:splat"
   status = 200
   force = true
