--- a/netlify.toml
+++ b/netlify.toml
@@ -12,6 +12,17 @@
   force = true
 
 [[redirects]]
+  from = "wiki.fromjason.xyz/*"
+  to = "https://publish.obsidian.md/hypertextgarden/:splat"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+[[redirects]]
   from = "/patreons-new-logo-design-is-good-actually"
   to = "/freelance/patreon-s-new-logo-design-is-good-actually/"
   status = 301
