--- a/netlify.toml
+++ b/netlify.toml
@@ -6,8 +6,8 @@
   ID = "5d3e30a9-ff13-419a-9b09-5a2e08da5b7d"
 
 [[redirects]]
-  from = "/hypertextgarden/*"
-  to = "https://publish.obsidian.md/:splat"
+  from = "wiki.fromjason.xyz/*"
+  to = "https://publish.obsidian.md/hypertextgarden/:splat"
   status = 200
   force = true
 
